--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 before_script:
   - npm install; gulp
-script: gulp test
+# script: gulp test
 language: node_js
 env:
   - PORT=7777
 node_js:
   - "5.1"
   - "4"
-  - "0.12"
+ # - "0.12"
